@@ -1,5 +1,10 @@
 2013-11-19  Corinna Vinschen  <corinna@vinschen.de>
 
+	* cygcheck.cc (dump_sysinfo): Revert Windows 8.1 hack.  It's not
+	working.  Add a (hopefully temporary) comment.
+
+2013-11-19  Corinna Vinschen  <corinna@vinschen.de>
+
 	* cygcheck.cc (dump_sysinfo): Drop code trying to fetch OSVERSIONINFO
 	if fetching OSVERSIONINFOEX failed.  Drop code handling unsupported
 	platform IDs.  Add code to tweak dwMinorVersion on Windows 8.1 if no
